Bug 133905 - Skia: Bad rendering of Bézier curves in slideshow
Summary: Skia: Bad rendering of Bézier curves in slideshow
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.0.1
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-06-11 18:16 UTC by Regina Henschel
Modified: 2020-06-15 21:36 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
shapes made with Bezier curves (12.79 KB, application/vnd.oasis.opendocument.presentation)
2020-06-11 18:16 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2020-06-11 18:16:10 UTC
Created attachment 161894 [details]
shapes made with Bezier curves

Open attached file. It has arc shapes. The blue shapes are original arcs, the red one is converted to curve.

Start presentation. Notice, that the curves do not look round, but have corners. It seems that only the corners are used and the fact, that it is a Bezier curve is not considered. I expect subdivision of the Bezier curve in rendering, same as it is done in edit mode.

I see the error in Version: 7.1.0.0.alpha0+ (x64)
Build ID: 933d03e36db2a01cbda3d4ca13f4333d38239d1e
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL

The error does not happen, if Skia is disabled.
Comment 1 Telesto 2020-06-11 19:06:51 UTC
Repro
Version: 7.1.0.0.alpha0+ (x64)
Build ID: a201ab6f47c2d5a7ba4c5f998b0aa231cae82010
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 2 V Stuart Foote 2020-06-11 19:16:31 UTC
Confirmed on Windows build. 

No different in Skia software raster mode.

But, also note that on a dual headed system with Presenter's panel displayed--that the next slide preview shows the bumpy arcs--with or without Skia rendering.

And, if I disable the 'Hardware acceleration' (so CPU only rendering) both the presenter's panel preview and the displayed slide are bumpy.

So, this may not be a Skia only issue?

Version: 7.1.0.0.alpha0+ (x64)
Build ID: 59939d2490726336546c7ad05082d23031074e12
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL


=-Skia log-=
RenderMethod: vulkan
Vendor: 0x10de
Device: 0xffe
API: 1.1.119
Driver: 442.296.0
DeviceType: discrete
DeviceName: Quadro K2000
Blacklisted: no
Comment 3 Commit Notification 2020-06-15 09:47:36 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5d8f2c1eda5583dd89dcd1d03cbd38ddb68ad273

vcl canvas, don't draw bezier curves as straight lines (tdf#133905)

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2020-06-15 13:28:31 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/7f314586cdaea97636699b05f94fbefcc05cc71f

vcl canvas, don't draw bezier curves as straight lines (tdf#133905)

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Regina Henschel 2020-06-15 21:36:46 UTC
Seen OK in Version: 7.1.0.0.alpha0+ (x64)
Build ID: c87a978de4b121bd9fecbfc6bc1427be70d8335d
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Vulkan; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL