vcl canvas, don't draw bezier curves as straight lines (tdf#133905)

Change-Id: I8a5029ef7aa6e8f46b13f0713445da435b47dbed